# coupled_model_apptainer

./: .gitignore  .gitmodules
.github/workflows/: build_emfenv86.yml  build_nzesmenv.yml  build_wrf.yml
conf/: esmfenv86.def  nzesmenv.def  openmpi.def  openmpi_pmi2.def
examples/2comps/: 2comp_example.f90  2comp_example.i90  2comp_time_example.nml  CMakeLists.txt  README.md  atm.F90  driver.F90  esm.mod  esmf.i90  ocn.F90
examples/2comps_noesmf/: CMakeLists.txt
examples/3comps/: 3comp_example.f90  3comp_example.i90  3comp_time_example.nml  CMakeLists.txt  esm.mod  esmf.F90  esmf.i90  esmfApp.F90  esmfApp.i90  ice.F90  ice.i90  ice.mod  ocn.F90  ocn.i90  ocn.mod
examples/AtmOcnConProto/: Makefile  README  atm.F90  conn.F90  dist_mod.F90  ocn.F90  sourceme.sh  test_distgrid.F90
examples/AtmOcnIce/: CMakeLists.txt  README.md  atm.F90  conn.F90  esm.F90  esmApp.F90  ice.F90  ocn.F90  vtk_mod.F90
